# cv-forge-mcp

./: CONTRIBUTING.md  Dockerfile  INSTRUCTIONS.md  LICENSE  README.md  SECURITY.md  example_data.json  mcp_server.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
